(19) Added titles for each route as well as installed react-helmet package.

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="/node_modules/bootstrap/dist/js/bootstrap.min.js">
-  <title>File Manager</title>
+  <title>Vesta</title>
 </head>
 
 <body>
